[gd_scene load_steps=6 format=2]

[ext_resource path="res://places/SpaceBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/LiberationSerif-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/edit/SystemView.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=2]

[node name="SystemView" type="Spatial"]
script = ExtResource( 3 )
label_font = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Planets" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, 0 )

[node name="PlanetLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
layers = 4
light_cull_mask = 4293918724
omni_range = 10000.0
omni_attenuation = 0.013139

[node name="ShipLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
light_cull_mask = 4293918721
shadow_enabled = true
omni_range = 999999.0
omni_attenuation = 0.0228763

[node name="SpaceBackground" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )

[node name="TopCamera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65432e-14, -32.4787, 81.2257, 0 )
projection = 1
fov = 96.768
size = 200.0

[node name="Annotation2D" type="Node2D" parent="."]

[node name="Annotation3D" type="Spatial" parent="."]
[connection signal="draw" from="Annotation2D" to="." method="_on_Annotation2D_draw"]
